Use readAllBytes for image downloads (#141)